--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.10.0"
   }
 }
